# radbsdf

./: .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/: radbsdf.c  radbsdf.pxd  radbsdf.pyx
test/: test_blinds_kf.xml  test_direct_hemi.py  test_proj_solid_angle.py  test_query_bsdf.py  test_sample.py  test_summary.py
