[bdist_wheel]
universal = 1

[metadata]
name = radbsdf
version = 0.0.3
description = A Python wrapper of Radiance BSDF library
requires-python = ">=3.6"
license = {file = "License.txt"}
author = LBNL
author_email = taoningwang@lbl.gov
homepage = "https://github.com/LBNL-ETA/radbsdf"
repository = "https://github.com/LBNL-ETA/radbsdf"
documentation = "https://radbsdf.readthedocs.io"

